# ARCHESS_MVP

./: README.md  pyproject.toml
config/: strategic_patterns.json
src/: __init__.py  server.py  stockfish_wrapper.py
src/analyzers/: game_analyzer.py  pattern_tracker.py  plan_detector.py  plan_evaluator.py
src/utils/: interaction_helper.py  output_formatter.py  pgn_parser.py
tests/: test_game_analysis.py  test_mcp_server.py  test_plan_tools.py  test_tools.py
